<resources>
    <string name="app_name">fChat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_chats">Recent Chats</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fchat">FChat</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="privacy">By signing in you are agreeing our <font color="#FF036BB9">Term and privacy policy</font></string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember password</string>
    <string name="forget_password"><font color="#FF036BB9">Forget password</font></string>
    <string name="register">Register</string>
</resources>