<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.vn.fchat.ui.login.LoginViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.isLoading() ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:src="@drawable/ic_header"
            app:layout_constraintBottom_toTopOf="@id/login_txt"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/privacy_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_header" />

        <TextView
            android:id="@+id/privacy_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="72dp"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:text="@string/privacy"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/phone_edit_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_txt" />

        <EditText
            android:id="@+id/phone_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/rounded_white"
            android:drawableEnd="@drawable/ic_phone"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/password_edit_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/privacy_txt"
            tools:ignore="LabelFor,TextFields" />

        <EditText
            android:id="@+id/password_edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/rounded_white"
            android:drawableEnd="@drawable/ic_lock"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/remember_forget_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_edit_txt"
            tools:ignore="LabelFor,TextFields" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/remember_forget_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintBottom_toTopOf="@id/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_txt">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/remember_password_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/remember_password_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/remember_password_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/remember_password"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/remember_password_check_box"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/forget_password_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/forget_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/rounded_button_blue"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/remember_forget_password_layout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/rounded_button_white"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/blue__text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/remember_forget_password_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>